--- a/HTML5CC3/style.css
+++ b/HTML5CC3/style.css
@@ -1,5 +1,5 @@
 body{
-	background: #CCCCCC
+	
 }
 
 #banner{
@@ -7,7 +7,16 @@ body{
 
 }
 
-h1{
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
+}
+
+.titulo-principal{
+	padding-left: 20px;
+}
+
+.titulo-centralizado{
 	text-align: center
 }
 
@@ -22,4 +31,25 @@ p {
 
 em strong{
 	color: red;
+}
+
+.itens{
+	font-style: italic;
+}
+
+.beneficios{
+	background: #FFFFFF;
+	padding: 20px;
+}
+
+
+ul{
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagembeneficios{
+	width: 50%
 }
