Ajuste para site responsivo

--- a/HTML5CC3/style.css
+++ b/HTML5CC3/style.css
@@ -160,6 +160,7 @@ td{
 	font-size: 2em;
 	margin: 0 0 1em;
 	clear: left;
+	/*color: rgba(0,0,0,0.3);*/
 }
 
 .principal {
@@ -232,9 +233,34 @@ td{
 
 .imagem-beneficios{
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000
+}
+
+.imagem-beneficios:hover{	
+	opacity: 0.3;
 }
 
 .video{
 	width: 500px;
 	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+		width: auto;
+	}
+
+	h1{
+		text-align: center;
+	}
+
+	nav{
+		position: static;
+	}
+
+	.lista-beneficios, .imagem-beneficios{
+		width: 100%;
+	}
 }
